--- a/fuyuski.css
+++ b/fuyuski.css
@@ -99,4 +99,37 @@ a:hover{
 }
 .scene ul{
 	margin-bottom: 51px;
+	list-style: none;
+}
+.scene ul li{
+	width: 33.3%;
+	float: left;
+	position: relative;
+	background: #40514e;
+}
+.scene ul li a{
+	display: block;
+
+}
+.scene ul li a:hover{
+	background:rgba(16, 152, 157,0.5); 
+	transition: 0.6s ease;
+}
+.scene ul li a img{
+	height: 300px;
+}
+.scene ul li a p{
+	text-align: center;
+	position: absolute;
+	width: 100%;
+	top: 50%;
+	left: 0;
+	z-index: 1;
+}
+.news{
+	margin-top:100px; 
+	position: relative;
+}
+.news h2{
+	margin-top:100px; 
 }
