--- a/fuyuski.css
+++ b/fuyuski.css
@@ -48,7 +48,8 @@ header div h1 a{
 	transition: color 0.6s ease;
 }
 a:hover{
-	color: #11999e;
+	/*color: #11999e;*/
+	color: #6c819b;
 }
 #main{
 	display: block;
@@ -68,7 +69,7 @@ a:hover{
 #banner .bannerBox .bannerImg{
 	background: url(img/bannerImg.jpg) no-repeat center;
 	background-size: cover;
-
+	opacity: 0.8;
 	height: 100%;
 	width: 100%;
 	position: relative;
@@ -106,17 +107,36 @@ a:hover{
 	float: left;
 	position: relative;
 	background: #40514e;
+	
 }
 .scene ul li a{
 	display: block;
-
 }
-.scene ul li a:hover{
-	background:rgba(16, 152, 157,0.5); 
-	transition: 0.6s ease;
+.scene ul li:after{
+	transition: background 0.6s ease;
+	content: "";
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+.scene ul li:hover:after{
+	content: "";
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	/*background:rgba(16, 152, 157,0.5); */
+	background: #6c819b;
+	opacity: 0.6;
+	
 }
 .scene ul li a img{
-	height: 300px;
+	/*height: 300px;*/
+	display: inline;
+	width: 100%;
 }
 .scene ul li a p{
 	text-align: center;
@@ -125,11 +145,82 @@ a:hover{
 	top: 50%;
 	left: 0;
 	z-index: 1;
+	color: #fff;
 }
 .news{
-	margin-top:100px; 
 	position: relative;
+	top: 100px;
+	pointer-events: none;
+	margin-bottom: 144px;
 }
 .news h2{
-	margin-top:100px; 
+	margin-top:100px;
+	margin-bottom: 40px; 
+	text-align: center;
+}
+.news .newsDiv{
+	display: flex;
+	flex-direction: column;
+	align-items: baseline;
+}
+.news .newsDiv .newsWord{
+	margin: 20px auto;
+	width: 50%;
+
+}
+.news .newsDiv .newsWord div{
+	display: inline-block;
+	margin-right: 40px;
+}
+.news .newsDiv .newsWord div span{
+	margin-right: 10px;
+}
+.news .newsDiv .newsWord p{
+	display: inline-block;
+}
+.slide{
+	margin-bottom: 150px;
+}
+.slide .picSlide{
+	position: relative;
+	width: 100%;
+	height: 550px;
+	overflow: hidden;
+}
+
+.slide .picSlide div img{
+	width: 100%;
+	top: -50px;
+	position: relative;
+}
+/***********1張圖片show4秒，中間間隔1秒(1-4-1-4)***********/
+.slide .picSlide div{
+	animation: pic_slide 10s linear infinite;
+	position: absolute;
+	opacity: 0;
+}
+.slide .picSlide div:nth-child(1){
+	animation-delay: 0s;
+}
+.slide .picSlide div:nth-child(2){
+	animation-delay: 5s;
+
+}
+@keyframes pic_slide{
+	0%{
+		opacity: 0;
+		filter: alpha(opacity=0)
+	}
+	10%{
+		opacity: 0.8;
+		filter: alpha(opacity=80)
+	}
+	50%{
+		opacity: 0.8;
+		filter: alpha(opacity=80)
+	}
+	60%{
+		opacity: 0;
+		filter: alpha(opacity=0)
+	}
 }
