--- a/fuyuski.css
+++ b/fuyuski.css
@@ -184,7 +184,7 @@ a:hover{
 .slide .picSlide{
 	position: relative;
 	width: 100%;
-	height: 550px;
+	height: 600px;
 	overflow: hidden;
 }
 
@@ -223,4 +223,39 @@ a:hover{
 		opacity: 0;
 		filter: alpha(opacity=0)
 	}
+}
+footer{
+	display: block;
+}
+footer .footBox{
+	padding: 50px 0;
+	margin: 0 auto;
+	width: 1100px;
+	position: relative;
+	display: block;
+}
+footer .footBox .contact{
+	text-align: center;
+}
+footer .footBox .contact h2{
+	margin-bottom: 15px;
+}
+footer .footBox .contact p{
+	margin-bottom: 30px;
+}
+footer .footBox .contact .contactForm a{
+	padding: 14px;
+	min-width: 550px;
+	font-size: 14px;
+	border: 1px solid #aabcc2;
+	box-sizing: border-box;
+	display: inline-block;
+	letter-spacing: 1px;
+	text-decoration:none; 
+	transition: color .6s ease,border .6s ease,background .6s ease;
+}
+footer .footBox .contact .contactForm a:hover{
+	color: #fff;
+	border: 1px solid #2e6c9b;
+	background: #2e6c9b;
 }
