--- a/fuyuski.css
+++ b/fuyuski.css
@@ -5,6 +5,10 @@
 	border: 0;
 	outline: 0;
 	color: #000;
+	font-family: 'Roboto Condensed', sans-serif;
+}
+ul {
+    list-style: none;
 }
 #container{
 	text-align: left;
@@ -14,16 +18,29 @@ header{
 	width: 100%;
 	z-index: 11;
 }
+#logo {
+    display: block;
+    position: absolute;
+    top: 20px;
+    left: 30px;
+}
 header div h1 a{
 	text-decoration: none;
-	color: #40514e;
+	color: #134085;
+	font-size: 45px;
+	font-style: italic;
+	font-weight: 900;
+	letter-spacing: -0.07em;
+	text-shadow: 0px 2px 1px #565656;
 }
 .menuBox{
 	width: 100%;
 	float: right;
 	position: relative;
 	transition: opacity 1.25s ease,background 0s ease;
+	z-index: -1;
 }
+
 .menuBox .menuInfo{
 	float: right;
 }
@@ -38,6 +55,7 @@ header div h1 a{
 }
 .menuBox .menuInfo nav ul li p{
 	padding: 42px 18px 45px;
+	margin-right: 2vw;
 }
 .menuBox .menuInfo nav ul li p a{
 	font-size: 16px;
@@ -46,10 +64,11 @@ header div h1 a{
 	position: relative;
 	text-decoration: none;
 	transition: color 0.6s ease;
+	font-weight: 700;
 }
-a:hover{
+.menuBox .menuInfo nav ul li p a:hover{
 	/*color: #11999e;*/
-	color: #6c819b;
+	color: #2e6c9b;
 }
 #main{
 	display: block;
@@ -81,22 +100,31 @@ a:hover{
 	text-shadow: 1px 1px 1px #fff;
 }
 #banner .bannerWord h6{
-	font-weight: normal;
-	font-size: 30px;
+	line-height: 1.5;
+	letter-spacing: 0.003em;
+	font-style: italic;
+	font-size: 50px;
+	font-family: 'Vidaloka', serif;
+	color: #000000ba;
 }
 #banner .bannerWord p{
-	font-weight: 24px;
-
+	color: #000;
+	text-shadow: none;
+	letter-spacing: 0.075em;
+	font-size: 16px;
+	font-style: italic;
 }
 .scene{
-	margin-top: 144px;
-	margin-bottom: 150px;
+	margin-top: 250px;
+	margin-bottom: 250px;
 }
 .scene h2{
 	font-size: 36px;
 	text-align: center;
-	letter-spacing: 2px;
+	letter-spacing: 6px;
 	margin-bottom: 66px;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 300;
 }
 .scene ul{
 	margin-bottom: 51px;
@@ -120,6 +148,7 @@ a:hover{
 	position: absolute;
 	top: 0;
 	left: 0;
+
 }
 .scene ul li:hover:after{
 	content: "";
@@ -129,7 +158,7 @@ a:hover{
 	top: 0;
 	left: 0;
 	/*background:rgba(16, 152, 157,0.5); */
-	background: #6c819b;
+	background: #2e6c9b;
 	opacity: 0.6;
 	
 }
@@ -142,21 +171,28 @@ a:hover{
 	text-align: center;
 	position: absolute;
 	width: 100%;
-	top: 50%;
+	top: 43%;
 	left: 0;
 	z-index: 1;
 	color: #fff;
+	font-size: 2vw;
+	letter-spacing: 0.075em;
+	font-family: 'Vidaloka', serif;
 }
 .news{
 	position: relative;
-	top: 100px;
+	top: 250px;
 	pointer-events: none;
 	margin-bottom: 144px;
 }
 .news h2{
-	margin-top:100px;
-	margin-bottom: 40px; 
+	margin-top: 100px;
+	margin-bottom: 40px;
 	text-align: center;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 300;
+	font-size: 36px;
+	letter-spacing: 6px;
 }
 .news .newsDiv{
 	display: flex;
@@ -164,27 +200,38 @@ a:hover{
 	align-items: baseline;
 }
 .news .newsDiv .newsWord{
-	margin: 20px auto;
-	width: 50%;
-
+	margin: 40px auto 30px 30vw;
+	width: 60%;
+	border-left: #2e6c9b 6px solid;
+	padding-left: 10px;
 }
 .news .newsDiv .newsWord div{
 	display: inline-block;
-	margin-right: 40px;
+	margin-right: 80px;
+	
+}
+.news .newsDiv .newsWord div p{
+	font-weight: 700;
+	font-family: 'Roboto Condensed', sans-serif;
+	color: #245276f2;
 }
 .news .newsDiv .newsWord div span{
-	margin-right: 10px;
+	margin-right: 50px;
+	font-size: 22px;
 }
 .news .newsDiv .newsWord p{
 	display: inline-block;
+	font-size: 1.3vw;
+	font-family: 'Vidaloka', serif;
 }
 .slide{
+	margin-top: 350px;
 	margin-bottom: 150px;
 }
 .slide .picSlide{
 	position: relative;
 	width: 100%;
-	height: 600px;
+	height: 630px;
 	overflow: hidden;
 }
 
@@ -227,21 +274,29 @@ a:hover{
 footer{
 	display: block;
 }
-footer .footBox{
-	padding: 50px 0;
-	margin: 0 auto;
-	width: 1100px;
-	position: relative;
-	display: block;
+footer .footBox {
+    padding: 50px 0;
+    margin: 0 auto;
+    width: 80%;
+    position: relative;
+    display: block;
+    min-width: 1100px;
 }
 footer .footBox .contact{
 	text-align: center;
 }
 footer .footBox .contact h2{
 	margin-bottom: 15px;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 300;
+	font-size: 36px;
+	letter-spacing: 6px;
 }
 footer .footBox .contact p{
 	margin-bottom: 30px;
+	font-family: 'Vidaloka', serif;
+	letter-spacing: 0.112em;
+	color: #4b4b4b;
 }
 footer .footBox .contact .contactForm a{
 	padding: 14px;
@@ -258,4 +313,34 @@ footer .footBox .contact .contactForm a:hover{
 	color: #fff;
 	border: 1px solid #2e6c9b;
 	background: #2e6c9b;
+}
+#copyright {
+    float: right;
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+.footLink {
+    display: flex;
+    margin-top: 150px;
+    border-top: 3px solid #989898;
+}
+.linkItem{
+	margin: auto;
+	font-size: 24px;
+}
+.linkItem p {
+    margin-bottom: 30px;
+    margin-top: 50px;
+
+}
+.linkItem p a{
+	text-decoration: none;
+	font-weight: bolder;
+	font-family: 'Vidaloka', serif;
+}
+.linkItem ul li a {
+    text-decoration: none;
+    font-family: 'Vidaloka', serif;
+    color: #2e2e2e;
+    line-height: 1.6em;
 }
